--- a/index.html
+++ b/index.html
@@ -24,19 +24,30 @@
                         <div class="sub_div_firstsection">
                             <div class="btn_div">
                                 <button class="delivery_btn">
-                                    <img src="./images/Icon.svg" alt="">Delivery
+                                    <img src="./images/Icon.svg" alt="" class="icon">Delivery
                                 </button>
                                 <button class="pickup_btn">
-                                    <img src="./images/Icon.svg" alt="">Pickup
+                                    <img src="./images/lock.svg" alt="" class="icon">Pickup
                                 </button>
                             </div>
-                            <div></div>
+                            <hr >
+                            <div>
+                                <input type="text" placeholder="Enter Your Address" class="input_address"> 
+                                <button class="findfood_btn">
+                                    <img src="./images/search.svg" alt="" > Find Food
+                                </button>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-3 col-sm-12"></div>
+                    <div class="col-md-4 col-sm-12">
+                        <img src="./images/Image.png" alt="" class="first_img">
+                    </div>
                 </div>
             </div>
         </div>
+
+
+        
     </div>
 </body>
 
