--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                                     <img src="./images/lock.svg" alt="" class="icon">Pickup
                                 </button>
                             </div>
-                            <hr >
+                            <hr>
                             <div>
-                                <input type="text" placeholder="Enter Your Address" class="input_address"> 
+                                <input type="text" placeholder="Enter Your Address" class="input_address">
                                 <button class="findfood_btn">
-                                    <img src="./images/search.svg" alt="" > Find Food
+                                    <img src="./images/search.svg" alt=""> Find Food
                                 </button>
                             </div>
                         </div>
@@ -47,7 +47,216 @@
         </div>
 
 
-        
+        <!-- CARD 1 conatiner -->
+        <div class="container">
+            <div class="row card_one">
+                <div class="col-md-3 col-sm-12 c1i1">
+                    <h6 class="c1heading">Greys Vage</h6> <br>
+                    <button class="c1btn">6 Days Remaining</button>
+                </div>
+                <div class="col-md-3 col-sm-12 c1i2">
+                    <h6 class="c1heading">Greys Vage</h6> <br>
+                    <button class="c1btn">6 Days Remaining</button>
+                </div>
+                <div class="col-md-3 col-sm-12 c1i3">
+                    <h6 class="c1heading">Greys Vage</h6> <br>
+                    <button class="c1btn">7 Days Remaining</button>
+                </div>
+                <div class="col-md-3 col-sm-12 c1i4">
+                    <h6 class="c1heading">Greys Vage</h6> <br>
+                    <button class="c1btn">7 Days Remaining</button>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- next conatiner  -->
+        <div class="container-fluid box2">
+            <div class="container">
+                <div class="box2_heading">
+                    <h1>How does it work</h1>
+                </div>
+                <div class="row ">
+                    <div class="col-md-3 col-sm-12 box_col">
+                        <img src="./images/box2_icon1.svg" alt="" class="box2_icon">
+                        <h6 class="my-2">Select location</h6>
+                        <p>Choose the location where your <br> food will be delivered.</p>
+                    </div>
+                    <div class="col-md-3 col-sm-12 box_col">
+                        <img src="./images/box2_icon2.svg" alt="" class="box2_icon">
+                        <h6 class="my-2">Choose order</h6>
+                        <p>Check over hundreds of menus to <br> pick your favorite food</p>
+                    </div>
+                    <div class="col-md-3 col-sm-12 box_col">
+                        <img src="./images/box2_icon3.svg" alt="" class="box2_icon">
+                        <h6 class="my-2">Pay advanced</h6>
+                        <p>It's quick, safe, and simple. Select <br> several methods of payment</p>
+                    </div>
+                    <div class="col-md-3 col-sm-12 box_col ">
+                        <img src="./images/box2_icon4.svg" alt="" id="box2_icon">
+                        <h6 class="my-2">Enjoy meals</h6>
+                        <p>Food is made and delivered directly <br> to your home.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+        <!-- next card container  -->
+
+        <div class="container card_two">
+            <div class="card2_heading">
+                <h1>Popular items</h1>
+            </div>
+            <div class="row card2">
+                <!-- <div class="clo-md-1">
+                    <img src="./images/left_icon.svg" alt="" class="left_right_icon">
+                </div> -->
+                <div class="col-md-2">
+                    <img src="./images/Rectangle 336.png" alt="" class="card2_img">
+                    <h6>Cheese Burger</h6>
+                    <div class="card2_div">
+                        <img src="./images/card2_icon.svg" alt="">
+                        <p>Burger Arena</p>
+                    </div>
+                    <button class="card2_btn">Order Now</button>
+                </div>
+                <div class="col-md-2">
+                    <img src="./images/Rectangle 336 (1).png" alt="" class="card2_img">
+                    <h6>Cheese Burger</h6>
+                    <div class="card2_div">
+                        <img src="./images/card2_icon.svg" alt="">
+                        <p>Burger Arena</p>
+                    </div>
+                    <button class="card2_btn">Order Now</button>
+                </div>
+                <div class="col-md-2">
+                    <img src="./images/Rectangle 336 (2).png" alt="" class="card2_img">
+                    <h6>Cheese Burger</h6>
+                    <div class="card2_div">
+                        <img src="./images/card2_icon.svg" alt="">
+                        <p>Burger Arena</p>
+                    </div>
+                    <button class="card2_btn">Order Now</button>
+                </div>
+                <div class="col-md-2">
+                    <img src="./images/Rectangle 336 (3).png" alt="" class="card2_img">
+                    <h6>Cheese Burger</h6>
+                    <div class="card2_div">
+                        <img src="./images/card2_icon.svg" alt="">
+                        <p>Burger Arena</p>
+                    </div>
+                    <button class="card2_btn">Order Now</button>
+                </div>
+                <div class="col-md-2">
+                    <img src="./images/Rectangle 336 (4).png" alt="" class="card2_img">
+                    <h6>Cheese Burger</h6>
+                    <div class="card2_div">
+                        <img src="./images/card2_icon.svg" alt="">
+                        <p>Burger Arena</p>
+                    </div>
+                    <button class="card2_btn">Order Now</button>
+                </div>
+                <!-- <div class="clo-md-1">
+                    <img src="./images/left_icon.svg" alt="" class="left_right_icon">
+                </div> -->
+            </div>
+        </div>
+
+
+        <!-- Next section -->
+
+
+
+        <div class="container ">
+            <div class="card2_heading">
+                <h1>Featured Restaurants</h1>
+            </div>
+            <div class="row card3_row">
+                <div class="col-md-3 col-sm-12 card3_1" >
+                    <div>
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" >20% off
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn2">Fast
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/foodworld.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Foodworld</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">46</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc">Opens tomorrow</button>
+
+
+                </div>
+                <div class="col-md-3 col-sm-12 card3_2" >
+                    <div>
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" >15% off
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn2">Fast
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/pizzahub.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Pizzahub</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">40</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc">Opens tomorrow</button>
+
+
+                </div>
+                <div class="col-md-3 col-sm-12 card3_3" >
+                    <div>
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" >15% off
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn2">Fast
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/pizzahub.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Pizzahub</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">40</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc">Opens tomorrow</button>
+
+
+
+
+                </div>
+                <div class="col-md-3 col-sm-12 card3_4" >
+
+                </div>
+            </div>
+        </div>
+
+
+
+
     </div>
 </body>
 
