--- a/index.html
+++ b/index.html
@@ -174,13 +174,15 @@
                 <h1>Featured Restaurants</h1>
             </div>
             <div class="row card3_row">
-                <div class="col-md-3 col-sm-12 card3_1" >
-                    <div>
+                <div class="col-md-3 col-sm-12 p-3">
+                    <div class="card3_1">
                         <button class="card3_btn1">
-                            <img src="./images/card3_icon1.svg" alt="" >20% off
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">20% off</p>
                         </button>
                         <button class="card3_btn2">
-                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn2">Fast
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
                         </button>
                     </div>
                     <div class="card3_disc">
@@ -194,17 +196,17 @@
                             </div>
                         </div>
                     </div>
-                    <button class="card3_btn_disc">Opens tomorrow</button>
-
-
+                    <button class="card3_btn_disc_pink">Opens tomorrow</button>
                 </div>
-                <div class="col-md-3 col-sm-12 card3_2" >
-                    <div>
+                <div class="col-md-3 col-sm-12 p-3">
+                    <div class="card3_2">
                         <button class="card3_btn1">
-                            <img src="./images/card3_icon1.svg" alt="" >15% off
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">15% off</p>
                         </button>
                         <button class="card3_btn2">
-                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn2">Fast
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
                         </button>
                     </div>
                     <div class="card3_disc">
@@ -214,45 +216,227 @@
                             <div class="icon_p">
                                 <img src="./images/star_icon.svg" alt="" class="star_icon">
                                 <p class="star_icon">40</p>
-
                             </div>
                         </div>
                     </div>
-                    <button class="card3_btn_disc">Opens tomorrow</button>
-
-
+                    <button class="card3_btn_disc_pink">Opens tomorrow</button>
                 </div>
-                <div class="col-md-3 col-sm-12 card3_3" >
-                    <div>
+                <div class="col-md-3 col-sm-12 p-3">
+                    <div class="card3_3">
                         <button class="card3_btn1">
-                            <img src="./images/card3_icon1.svg" alt="" >15% off
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">10% off</p>
                         </button>
                         <button class="card3_btn2">
-                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn2">Fast
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
                         </button>
                     </div>
                     <div class="card3_disc">
                         <img src="./images/pizzahub.png" alt="" class="card3_logo">
                         <div class="card_heading">
-                            <h6>Pizzahub</h6>
+                            <h6>Donuts hut</h6>
                             <div class="icon_p">
                                 <img src="./images/star_icon.svg" alt="" class="star_icon">
-                                <p class="star_icon">40</p>
-
+                                <p class="star_icon">20</p>
                             </div>
                         </div>
                     </div>
-                    <button class="card3_btn_disc">Opens tomorrow</button>
-
-
-
-
+                    <button class="card3_btn_disc_green">Open Now</button>
                 </div>
-                <div class="col-md-3 col-sm-12 card3_4" >
-
+                <div class="col-md-3 col-sm-12 py-3">
+                    <div class="card3_4">
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">10% off</p>
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/donut.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Donuts hut</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">20</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc_green">Open Now</button>
                 </div>
             </div>
         </div>
+        <div class="container ">
+            <div class="row card3_row">
+                <div class="col-md-3 col-sm-12 p-3">
+                    <div class="card3_5">
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">10% off</p>
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/ruby.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Ruby Tuesday</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">26</p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc_green">Open Now</button>
+                </div>
+                <div class="col-md-3 col-sm-12 p-3">
+                    <div class="card3_6">
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">25% off</p>
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/kuakata.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Kuakata Fried Chicken</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">53</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc_green">Open Now</button>
+                </div>
+                <div class="col-md-3 col-sm-12 p-3">
+                    <div class="card3_7">
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">10% off</p>
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/red.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Red Square</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">45</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc_green">Open Now</button>
+                </div>
+                <div class="col-md-3 col-sm-12 py-3">
+                    <div class="card3_8">
+                        <button class="card3_btn1">
+                            <img src="./images/card3_icon1.svg" alt="" class=" card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">10% off</p>
+                        </button>
+                        <button class="card3_btn2">
+                            <img src="./images/card3_icon2.svg" alt="" class="card3_btn_disc">
+                            <p class="card3_btn_disc card3_btn_disc_p">Fast</p>
+                        </button>
+                    </div>
+                    <div class="card3_disc">
+                        <img src="./images/taco.png" alt="" class="card3_logo">
+                        <div class="card_heading">
+                            <h6>Taco Bell</h6>
+                            <div class="icon_p">
+                                <img src="./images/star_icon.svg" alt="" class="star_icon">
+                                <p class="star_icon">35</p>
+                            </div>
+                        </div>
+                    </div>
+                    <button class="card3_btn_disc_green">Open Now</button>
+                </div>
+            </div>
+        </div>
+        <div class="view_btn_div">
+            <button class="view_btn">View All ></button>
+        </div>
+        <div class="container-fluid card4_bgcolor">
+
+            <div class="container">
+                <div class="row card4row1">
+                    <div class="card4_main">
+                        <h1>Search by Food</h1>
+                        <div class="card4_row1">
+                            <p class="card4_text">View All ></p>
+                            <button class="arrow_btn">
+                                < </button>
+                                    <button class="arrow_btn"> > </button>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row card4_row">
+                    <div class="col-md-2 col-sm-6 py-3 card4_div">
+                        <img src="./images/c4i1.png" alt="" class="card4_img"> <br>
+                        <p>Pizza</p>
+                    </div>
+                    <div class="col-md-2 col-sm-6 py-3 card4_div">
+                        <img src="./images/c4i2.png" alt="" class="card4_img"> <br>
+                        <p>Burger</p>
+                    </div>
+                    <div class="col-md-2 col-sm-6 py-3 card4_div">
+                        <img src="./images/c4i3.png" alt="" class="card4_img"> <br>
+                        <p>Noodles</p>
+                    </div>
+                    <div class="col-md-2 col-sm-6 py-3 card4_div">
+                        <img src="./images/c4i4.png" alt="" class="card4_img"> <br>
+                        <p>Sub-sandiwch</p>
+                    </div>
+                    <div class="col-md-2 col-sm-6 py-3 card4_div">
+                        <img src="./images/c4i5.png" alt="" class="card4_img"> <br>
+                        <p>Chowmein</p>
+                    </div>
+                    <div class="col-md-2 col-sm-6 py-3 card4_div">
+                        <img src="./images/c4i6.png" alt="" class="card4_img"> <br>
+                        <p>Steak</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid box_fluid">
+            <div class="box_fluid_div">
+                <div class="conatainer">
+                    <div class="row">
+                        <div class="col-md-3 col-sm-12">
+
+                        </div>
+                        <div class="col-md-1"></div>
+                        <div class="col-md-3 col-sm-12">
+
+                        </div>
+                        <div class="col-md-1"></div>
+
+                        <div class="col-md-3 col-sm-12">
+
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </div>
+
+        </div>
+
 
 
 
