--- a/index.html
+++ b/index.html
@@ -412,31 +412,89 @@
                 </div>
             </div>
         </div>
-        <div class="container-fluid box_fluid">
+        <!-- <div class="container-fluid box_fluid">
             <div class="box_fluid_div">
                 <div class="conatainer">
                     <div class="row">
-                        <div class="col-md-3 col-sm-12">
-
-                        </div>
+                        <div class="col-md-3 col-sm-12"></div>
                         <div class="col-md-1"></div>
-                        <div class="col-md-3 col-sm-12">
-
-                        </div>
+                        <div class="col-md-3 col-sm-12"></div>
                         <div class="col-md-1"></div>
+                        <div class="col-md-3 col-sm-12"></div>
+                    </div>
+                </div>
+            </div>
+        </div> -->
 
-                        <div class="col-md-3 col-sm-12">
 
-                        </div>
+
+        <!-- Next section  -->
+        <div class="container">
+            <div class="row card5_row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="c5_subdiv1">
+                        <h1>Best deals <b class="heading_color">Crispy Sandwiches</b></h1>
+                        <p>Enjoy the large size of sandwiches. Complete <br>
+                            perfect slice of sandwiches.</p>
+                        <button class="card5_btn1">Proceed to order ></button>
+
+                    </div>
+                </div>
+                <div class="col-md-8 col-sm-12">
+                    <img src="./images/c5i1.png" alt="" class="card5_img1">
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Next card -->
+        <div class="container">
+            <div class="row card5_row">
+                <div class="col-md-8 col-sm-12">
+                    <img src="./images/c5i2.png" alt="" class="card5_img2">
+                </div>
+                <div class="col-md-4 col-sm-12">
+                    <div class="c5_subdiv2">
+                        <h1>Celebrate parties with <b class="heading_color">Fried Chicken</b></h1>
+                        <p>Get the best fried chicken smeared with a lip <br> smacking lemon chili flavor. Check out
+                            <br>
+                            best deals for fried chicken.</p>
+                        <button class="card5_btn2">Proceed to order ></button>
 
                     </div>
                 </div>
 
-
             </div>
-
         </div>
 
+
+        <!-- Next card  -->
+        <div class="container">
+            <div class="row card5_row">
+                <div class="col-md-4 col-sm-12">
+                    <div class="c5_subdiv1">
+                        <h1>Wanna eat hot & spicy<b class="heading_color">Pizza?</b></h1>
+                        <p>Enjoy the large size of sandwiches. Complete <br>
+                            perfect slice of sandwiches.</p>
+                        <button class="card5_btn1">Proceed to order ></button>
+
+                    </div>
+                </div>
+                <div class="col-md-8 col-sm-12">
+                    <img src="./images/c5i3.png" alt="" class="card5_img1">
+                </div>
+            </div>
+        </div>
+
+        <!-- Next section  -->
+        <div class="container-fluid bg_img">
+            <div class="text_center">
+                <h1 class="heading">Are you ready to order with <br> the best deals?</h1>
+                <button class="last_btn">Proceed to order ></button>
+            </div>
+
+
+        </div>
 
 
 
