--- a/index.html
+++ b/index.html
@@ -458,7 +458,8 @@
                         <h1>Celebrate parties with <b class="heading_color">Fried Chicken</b></h1>
                         <p>Get the best fried chicken smeared with a lip <br> smacking lemon chili flavor. Check out
                             <br>
-                            best deals for fried chicken.</p>
+                            best deals for fried chicken.
+                        </p>
                         <button class="card5_btn2">Proceed to order ></button>
 
                     </div>
@@ -492,6 +493,106 @@
                 <h1 class="heading">Are you ready to order with <br> the best deals?</h1>
                 <button class="last_btn">Proceed to order ></button>
             </div>
+        </div>
+
+
+
+
+
+        <!-- FOOTER SECTION  -->
+        <div class="container-fluid footer_bg">
+            <div class="container">
+                <h6 class=" last_heading">Our top cities</h6>
+                <div class="row last_row">
+                    <div class="col-md-2 col-sm-12">
+                        <p class="text_color">San Francisco</p>
+                        <p class="text_color">Miami</p>
+                        <p class="text_color">San Diego</p>
+                        <p class="text_color">East Bay</p>
+                        <p class="text_color">Long Beach</p>
+                    </div>
+                    <div class="col-md-2 col-sm-12">
+                        <p class="text_color">Los Angeles</p>
+                        <p class="text_color">Washington DC</p>
+                        <p class="text_color">Seattle</p>
+                        <p class="text_color">Portland</p>
+                        <p class="text_color">Nashville</p>
+                    </div>
+                    <div class="col-md-2 col-sm-12">
+                        <p class="text_color">New York City</p>
+                        <p class="text_color">Orange County</p>
+                        <p class="text_color">Atlanta</p>
+                        <p class="text_color">Charlotte</p>
+                        <p class="text_color">Denver</p>
+                    </div>
+                    <div class="col-md-2 col-sm-12">
+                        <p class="text_color">Chicago</p>
+                        <p class="text_color">Phoenix</p>
+                        <p class="text_color">Las Vegas</p>
+                        <p class="text_color">Sacramento</p>
+                        <p class="text_color">Oklahoma City</p>
+                    </div>
+                    <div class="col-md-2 col-sm-12">
+                        <p class="text_color">Columbus</p>
+                        <p class="text_color">New Mexico</p>
+                        <p class="text_color">Albuquerque</p>
+                        <p class="text_color">Sacramento</p>
+                        <p class="text_color">New Orleans</p>
+                    </div>
+                    <hr class="footer_hr">
+                </div>
+            </div>
+            <div class="container">
+                <div class="row last_row">
+                    <div class="col-md-6">
+                        <div class="row last_row">
+                            <div class="col-md-4 col-sm-12">
+                                <h6 class="text_color last_heading1">Company</h6>
+                                <p class="text_color">About us</p>
+                                <p class="text_color">Team</p>
+                                <p class="text_color">Careers</p>
+                                <p class="text_color">Blogs</p>
+                            </div>
+                            <div class="col-md-4 col-sm-12">
+                                <h6 class="text_color last_heading1">Contact</h6>
+                                <p class="text_color">Help & Support</p>
+                                <p class="text_color">Partner with us </p>
+                                <p class="text_color">Ride with us</p>
+                            </div>
+                            <div class="col-md-4 col-sm-12">
+                                <h6 class="text_color last_heading1">Legal</h6>
+                                <p class="text_color">Terms & Conditions</p>
+                                <p class="text_color">Refund & Cancellation</p>
+                                <p class="text_color">Privacy Policy</p>
+                                <p class="text_color">Cookie Policy</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-12">
+                        <h6 class="follow">Follow Us</h6>
+                        <div class="icon_div">
+                            <img src="./images/1.svg" alt="" class="icon_img">
+                            <img src="./images/2.svg" alt="" class="icon_img">
+                            <img src="./images/3.svg" alt="" class="icon_img">
+                        </div>
+                        <p class="last_p">Receive exclusive offers in your mailbox</p>
+                        <div>
+                            <input type="text" placeholder="Enter Your email" class="last_input">
+                            <button class="last_btn1">Subscribe</button>
+                        </div>
+                    </div>
+                    <hr class="last_hr">
+                </div>
+            </div>
+
+
+
+
+
+
+
+
+
 
 
         </div>
