--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <h1>Popular items</h1>
             </div>
             <div class="row card2">
-                <!-- <div class="clo-md-1">
+                <!-- <div class="col-md-1">
                     <img src="./images/left_icon.svg" alt="" class="left_right_icon">
                 </div> -->
                 <div class="col-md-2">
@@ -158,7 +158,7 @@
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
-                <!-- <div class="clo-md-1">
+                <!-- <div class="col-md-1">
                     <img src="./images/left_icon.svg" alt="" class="left_right_icon">
                 </div> -->
             </div>
@@ -384,6 +384,7 @@
 
                     </div>
                 </div>
+
                 <div class="row card4_row">
                     <div class="col-md-2 col-sm-6 py-3 card4_div">
                         <img src="./images/c4i1.png" alt="" class="card4_img"> <br>
@@ -412,19 +413,35 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container-fluid box_fluid">
-            <div class="box_fluid_div">
-                <div class="conatainer">
-                    <div class="row">
-                        <div class="col-md-3 col-sm-12"></div>
-                        <div class="col-md-1"></div>
-                        <div class="col-md-3 col-sm-12"></div>
-                        <div class="col-md-1"></div>
-                        <div class="col-md-3 col-sm-12"></div>
+
+
+
+        <!-- Next section  -->
+        <div class="container-fluid simple">
+            <div class="row">
+                <div class="container">
+                    <div class="row simple_row">
+                        <div class="col-md-3">
+                            <h2 class="simple_heading">Daily Discounts</h2>
+                        </div>
+                        <div class="col-md-1">
+                            <img src="./images/HR.svg" alt="" class="hr_img">
+                        </div>
+                        <div class="col-md-3">
+                            <h2 class="simple_heading">Daily Discounts</h2>
+                        </div>
+                        <div class="col-md-1">
+                            <img src="./images/HR.svg" alt="" class="hr_img">
+                        </div>
+                        <div class="col-md-3">
+                            <h2 class="simple_heading">Daily Discounts</h2>
+                        </div>
+
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div>
+
 
 
 
