--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 <body>
     <div class="body_div">
         <!-- NAVBAR SECTION -->
+        <nav>
+            
+        </nav>
 
         <!-- first section -->
         <div class="container-fluid first_section">
@@ -428,19 +431,24 @@
                             <img src="./images/HR.svg" alt="" class="hr_img">
                         </div>
                         <div class="col-md-3">
-                            <h2 class="simple_heading">Daily Discounts</h2>
+                            <h2 class="simple_heading">Live Tracing</h2>
                         </div>
                         <div class="col-md-1">
                             <img src="./images/HR.svg" alt="" class="hr_img">
                         </div>
                         <div class="col-md-3">
-                            <h2 class="simple_heading">Daily Discounts</h2>
+                            <h2 class="simple_heading">Quick Delivery</h2>
                         </div>
 
                     </div>
                 </div>
             </div>
         </div>
+        <!-- <div class="container-fluid">
+            <div class="row">
+                <img src="./images/App Download.svg" alt="" class="large_img">
+            </div>
+        </div> -->
 
 
 
