--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <div class="body_div">
         <!-- NAVBAR SECTION -->
         <nav>
-            
+            <div>
+                
+            </div>
         </nav>
 
         <!-- first section -->
