--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
         <!-- NAVBAR SECTION -->
         <nav>
             <div>
-                
+                <div>
+                    
+                </div>
             </div>
         </nav>
 
