--- a/index.html
+++ b/index.html
@@ -57,20 +57,24 @@
         <!-- CARD 1 conatiner -->
         <div class="container">
             <div class="row card_one">
-                <div class="col-md-3 col-sm-12 c1i1">
-                    <h6 class="c1heading">Greys Vage</h6> <br>
+                <div class="col-md-3 col-sm-12 ">
+                    <img src="./images/c1i1.png" alt="" class="c1i1">
+                    <h6 >Greys Vage</h6> <br>
                     <button class="c1btn">6 Days Remaining</button>
                 </div>
-                <div class="col-md-3 col-sm-12 c1i2">
-                    <h6 class="c1heading">Greys Vage</h6> <br>
+                <div class="col-md-3 col-sm-12 ">
+                    <img src="./images/c1i2.png" alt="" class="c1i1">
+                    <h6 >Greys Vage</h6> <br>
                     <button class="c1btn">6 Days Remaining</button>
                 </div>
-                <div class="col-md-3 col-sm-12 c1i3">
-                    <h6 class="c1heading">Greys Vage</h6> <br>
+                <div class="col-md-3 col-sm-12 ">
+                    <img src="./images/c1i3.png" alt="" class="c1i1">
+                    <h6 >Greys Vage</h6> <br>
                     <button class="c1btn">7 Days Remaining</button>
                 </div>
-                <div class="col-md-3 col-sm-12 c1i4">
-                    <h6 class="c1heading">Greys Vage</h6> <br>
+                <div class="col-md-3 col-sm-12 ">
+                    <img src="./images/c1i4.png" alt="" class="c1i1">
+                    <h6 >Greys Vage</h6> <br>
                     <button class="c1btn">7 Days Remaining</button>
                 </div>
             </div>
@@ -117,9 +121,9 @@
                 <h1>Popular items</h1>
             </div>
             <div class="row card2">
-                <!-- <div class="col-md-1">
-                    <img src="./images/left_icon.svg" alt="" class="left_right_icon">
-                </div> -->
+                <div class="col-md-1">
+                   
+                </div>
                 <div class="col-md-2">
                     <img src="./images/Rectangle 336.png" alt="" class="card2_img">
                     <h6>Cheese Burger</h6>
@@ -165,9 +169,9 @@
                     </div>
                     <button class="card2_btn">Order Now</button>
                 </div>
-                <!-- <div class="col-md-1">
-                    <img src="./images/left_icon.svg" alt="" class="left_right_icon">
-                </div> -->
+                <div class="col-md-1">
+                  
+                </div>
             </div>
         </div>
 
